--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+  <% for (var i in htmlWebpackPlugin.options.cdn ) { %>
+  <script src="<%= htmlWebpackPlugin.options.cdn[i] %>"></script>
+  <% } %>
 </body>
 
 </html>
